<resources>
    <string name="app_name">大头秀</string>
    <string name="datouxiu">datouxiu</string>
    <string name="meipai">美拍</string>

    <string name="title_my_home">我的主页</string>
    <string name="title_setting">设置</string>
    <string name="title_prompt">提示</string>

    <string name="message_save_success">保存成功！快分享给你的小伙伴让他们一起看看吧！</string>

    <string name="dialog_waiting">请稍候</string>

    <string name="hint_input_search_content">请输入搜索内容</string>

    <string name="prompt_add">制作</string>
    <string name="prompt_my">我的</string>
    <string name="prompt_loading">加载中…</string>
    <string name="prompt_no_more">没有更多数据啦！</string>
    <string name="prompt_no_result">没有符合条件的结果</string>
    <string name="prompt_version">大头秀 Version\t</string>
    <string name="prompt_contact">如果您喜欢我们的产品，或者有问题反馈\n联系方式，QQ：3296963354</string>
    <string name="prompt_agree_terms">使用此应用程序即表示您同意我们的服务条款。</string>
    <string name="prompt_terms">服务条款及声明</string>
    <string name="prompt_back">返回</string>
    <string name="prompt_save">保存</string>
    <string name="prompt_share">分享</string>
    <string name="prompt_delete">删除</string>
    <string name="prompt_deleting">正在删除，请稍候…</string>
    <string name="prompt_sharing">正在为分享进行一些必要的初始化，请稍候…</string>
    <string name="prompt_saving">正在为保存进行一些必要的初始化，请稍候…</string>
    <string name="prompt_save_success">保存成功！快把它分享给你的朋友看看吧~</string>
    <string name="prompt_no">取消</string>

    <string name="error_network">网络开了点小差，请重试</string>
    <string name="error_no_video">您还没有录制视频哦，快去试试吧！</string>
    <string name="error_some_problem">出现了一些问题，请稍后重试</string>
    <string name="error_presenter_must_be_inited">Presenter must be initted !</string>
    <string name="error_share_fail">分享失败，请稍后重试</string>
    <string name="error_uuid_null">无法生成用户唯一标识码</string>
    <string name="error_not_exist">删除失败，文件不存在</string>
    <string name="error_delete_fail">删除失败，请重试</string>
    <string name="error_save_fail">保存失败，请稍后重试</string>
    <string name="prompt_save_to_gallery_success">成功保存到相册！</string>
    <string name="title_terms">服务条款及声明</string>
    <string name="title_share">分享</string>
    <string name="prompt_share_anytime">已保存在手机相册</string>
    <string name="error_data_wrong">数据有误，请返回重试</string>
    <string name="prompt_use_guide">使用指南</string>
    <string name="prompt_invite_friend">邀请好友</string>
    <string name="prompt_feedback">意见反馈</string>
    <string name="prompt_service_terms">服务条款及声明</string>
    <string name="prompt_guide_1_title">释放演技</string>
    <string name="prompt_guide_1_message">为亲友送上有趣的问候</string>
    <string name="prompt_guide_2_title">纵情搞怪</string>
    <string name="prompt_guide_2_message">笑翻你的朋友圈</string>
    <string name="prompt_guide_3_title">节日祝福</string>
    <string name="prompt_guide_3_message">为亲友送上有趣的祝福</string>
    <string name="prompt_guide_4_title">新手提示</string>
    <string name="prompt_guide_4_message">在录制时，尽量保持头部不要晃动，\n大头框自己会动哦</string>
    <string name="prompt_scroll_to_next">滑动至下一页</string>
    <string name="prompt_start_datoushow">开始大头秀</string>
    <string name="prompt_commit">提交</string>
    <string name="title_feedback">意见反馈</string>
    <string name="hint_feedback">用着不爽？来这里吐槽！</string>
    <string name="hint_contact_way">您的联系方式（QQ号/微信号/微博/手机号）</string>
    <string name="error_input_complete">请填写完整！</string>
    <string name="message_send_success">您的反馈已经提交成功，我们将会在最短的时间内对您提出的问题进行处理！</string>
    <string name="prompt_ok">好的</string>
    <string name="title_invite_friends">邀请好友</string>
    <string name="prompt_invite_wechat">邀请微信好友</string>
    <string name="prompt_invite_wechat_comment">微信朋友圈</string>
    <string name="prompt_invite_qq">邀请QQ好友</string>
    <string name="prompt_invite_message">Hi，大头秀带给你快乐了么？将下载链接分享给好友，邀请他们一起来玩吧！</string>
    <string name="prompt_wechat">微信</string>
    <string name="prompt_wechat_comment">朋友圈</string>
    <string name="prompt_qq">QQ</string>
    <string name="prompt_copy_link">复制链接</string>
    <string name="prompt_cancel">取消</string>
    <string name="prompt_copy_success">复制成功！快去和你的小伙伴一起分享吧！</string>
    <string name="title_practise">练习模式</string>
    <string name="title_preparing">准备开始录制</string>
    <string name="title_recording">录制中</string>
    <string name="title_preview">预览</string>
    <string name="prompt_progress">当前进度：0%</string>
    <string name="prompt_finish">完成</string>
    <string name="prompt_sinaweibo">微博</string>
    <string name="title_service_terms">服务条款</string>

    <string-array name="status_error">
        <item>未知错误</item>
        <item>成功</item>
        <item>权限不足</item>
        <item>帐号不存在</item>
        <item>数据错误</item>
        <item>密码错误</item>
        <item>已存在</item>
        <item>不存在</item>
        <item>已过期</item>
        <item>验证码为空</item>
        <item>验证码错误</item>
    </string-array>
</resources>
