<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_feedback"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/prompt_commit"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/hint_feedback"
                android:maxLines="10"
                android:minLines="10"
                android:padding="16dp"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <EditText
                android:id="@+id/et_contact_way"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_contact_way"
                android:lines="1"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:textSize="14sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>