<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#55000000"
              android:gravity="center"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_rc"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/bg_rc_red_half"
                android:paddingTop="3dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:background="@drawable/ic_invite_background"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="44dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_invite_friend"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/prompt_invite_message"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/lly_wechat_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <com.lypeer.zybuluo.ui.custom.RatioLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        app:ratio="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_wechat_comment"/>
                    </com.lypeer.zybuluo.ui.custom.RatioLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_wechat_comment"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lly_wechat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <com.lypeer.zybuluo.ui.custom.RatioLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        app:ratio="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_wechat"/>
                    </com.lypeer.zybuluo.ui.custom.RatioLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_wechat"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lly_qq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <com.lypeer.zybuluo.ui.custom.RatioLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        app:ratio="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_qq"/>
                    </com.lypeer.zybuluo.ui.custom.RatioLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_qq"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lly_copy_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <com.lypeer.zybuluo.ui.custom.RatioLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        app:ratio="1">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_copy_link"/>

                    </com.lypeer.zybuluo.ui.custom.RatioLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_copy_link"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/prompt_cancel"
                android:textColor="@color/colorDark"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>